# internal/delivery/http/request/coa.go
@@ -1,0 +1,16 @@
+package request
+
+import "github.com/google/uuid"
+
+type COACreateRequest struct {
+	SubgroupId uuid.UUID `validate:"required" json:"subgroup_id"`
+	Code       string    `validate:"required,min=1" json:"code"`
+	Name       string    `validate:"required,min=1" json:"name"`
+}
+
+type COAUpdateRequest struct {
+	Id         uuid.UUID
+	SubgroupId uuid.UUID `validate:"required" json:"subgroup_id"`
+	Code       string    `validate:"required,min=1,max=20" json:"code"`
+	Name       string    `validate:"required,min=1,max=20" json:"name"`
+}
