# internal/delivery/http/response/coa.go
@@ -6,9 +6,13 @@ import (
 	"github.com/google/uuid"
 )
 
-type COAGroupResponse struct {
-	Id            uuid.UUID `json:"id"`
+type COAResponse struct {
+	Id uuid.UUID `json:"id"`
+	// SubgroupId    uuid.UUID            `json:"subgroup_id"`
+	// SubGroup      *COASubGroupResponse `json:"subgroup,omitempty"`
 	Code          string    `json:"code"`
+	Group         string    `json:"group"`
+	SubGroup      string    `json:"subgroup"`
 	Name          string    `json:"name"`
 	NormalBalance string    `json:"normal_balance"`
 	Status        int       `json:"status"`
