# internal/entity/coa_subgroup.go
@@ -11,14 +11,15 @@ func (COASubGroup) TableName() string {
 }
 
 type COASubGroup struct {
-	Id        uuid.UUID `gorm:"type:uuid; primaryKey; default:gen_random_uuid();" json:"id"`
+	Id        uuid.UUID `gorm:"type:uuid;primaryKey;" json:"id"`
 	GroupId   uuid.UUID `gorm:"type:uuid;not null;index" json:"group_id"`
-	Group     COAGroup  `gorm:"foreignKey:GroupId;constraint:OnUpdate:CASCADE,OnDelete:RESTRICT;" json:"group,omitempty"`
-	Code      string    `gorm:"type:character varying; not null; unique;" json:"code"`
-	Name      string    `gorm:"type:character varying; not null;" json:"name"`
-	Status    int       `gorm:"type:int; not null; default:1;" json:"status"`
-	CreatedAt time.Time `gorm:"autoCreateTime;" json:"created_at"`
-	UpdatedAt time.Time `gorm:"autoUpdateTime;" json:"updated_at"`
+	Group     COAGroup  `gorm:"foreignKey:GroupId;references:Id;constraint:OnUpdate:CASCADE,OnDelete:RESTRICT;" json:"group,omitempty"`
+	COA       []COA     `gorm:"foreignKey:SubgroupId"`
+	Code      string
+	Name      string
+	Status    int
+	CreatedAt time.Time
+	UpdatedAt time.Time
 }
 
 func (COASubGroup) SearchableFields() []string {
